# 260616-AI-agent-edu-team

./: .env.example  .gitignore  AGENTS.md  AI_커머스_운영_대시보드.docx  AI_커머스_운영_대시보드_발표자료.pptx  README.md  SESSION_HANDOFF.md  chat.txt  dashboard.py  inqury.txt  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
agent/: README.md  agent_creator.md  customer_cs.md  inventory.md  marketing.md  product_lead.md  product_planning.md  sales_product.md
db/: brand_search_data.csv  campaign_product_performance.csv  customer_data.csv  customer_segment_data.csv  delivery_experience_data.csv  inventory_data.csv  inventory_loss_estimate.csv  marketing_data.csv  pricing_promotion_data.csv  product_data.csv  recommendation_log.csv  review_cs_data.csv
db/_backups/correlation_coverage_20260617_152955/: campaign_product_performance.csv  cross_sell_data.csv  customer_data.csv  customer_segment_data.csv  product_retention_data.csv
db/_backups/correlation_tuning_20260617_153117/: brand_search_data.csv  campaign_product_performance.csv  inventory_loss_estimate.csv  marketing_data.csv  pricing_promotion_data.csv  product_data.csv  product_retention_data.csv
db/_backups/one_year_seed_20260617_123850/: inventory_data.csv  review_cs_data.csv  (+1 more)
docs/: AGENTS.md  AI Commerce Operations Dashboard: Build Guide.md  Agent Task Definitions.md  Chat Feature Spec.md  DASHBOARD_FEATURE_BRIEF_FOR_GPT.md  LLM_WORKFLOW_PATTERNS.md  SESSION_HANDOFF.md  개발 계획 업데이트 파일 보기.md
src/: __init__.py  agents.py  chat.py  models.py  openai_service.py  role_agents.py  workflow_patterns.py
(+2 files in other folders)
